# trasa-tutorial

./: .gitignore
trasa-ex-pt1/: CHANGELOG.md  LICENSE  trasa-ex.cabal
trasa-ex-pt1/src/: Main.hs
