cabal-version: 2.0
name: trasa-ex
version: 0.1.0.0
license: BSD3
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com
category: Web
build-type: Simple
extra-source-files: CHANGELOG.md

executable trasa-ex
  ghc-options: -Wall -Werror
  main-is: Main.hs
  build-depends: base ^>=4.12.0.0
    , trasa
    , trasa-server
    , quantification
    , bytestring
    , wai
    , wai-extra
    , warp
    , text
  hs-source-dirs: src
  default-language: Haskell2010
